--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     padding: 0px;
 }
 
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
 .choices, .hero, .playerButtons, .results, .replay-container{
     display: flex;
     justify-content: center;
@@ -47,6 +53,7 @@
     justify-content: space-between;
     padding: 15px;
     background-color: gray;
+    margin-top: auto;
 }
 
 .playerChoiceBtn {
